# redirect-project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  gunicorn.conf.py  pyproject.toml  pytest.ini  redirect_pools_config.toml
misc/haproxy/: haproxy.cfg
misc/origin/: Dockerfile  pyproject.toml
misc/origin/hello/: server.py
misc/wrk/: Dockerfile
misc/wrk/scripts/: random_redirect_pool_id.lua
redirect/: conf.py  dtos.py  protocols.py  server.py  service.py  strategy.py
tests/: conftest.py  redirect_pools_config_tests.toml  test_redirect.py
